Added memo comment. I think it would be a good idea to convert all eps figures to pdf with epstopdf.

--- a/ms.tex
+++ b/ms.tex
@@ -350,6 +350,7 @@ The scaling indexes are estimated to be $\alpha \sim 1/2-1$, $\beta \sim 1/2$, $
 
 Unlike usual hot jupiters, RGHJs are not subject to tidal lock, as the gravitational effects of their host star does not change even if the star evolves into red giants. Without no physical insights of the typical spin rate, we simply assume that of Jupiter: $\omega = 9.925$ [hr]. 
 \memoYF{Would their spin rate become higher or lower??}
+\memoDS{There's no reason to suspect either, although more massive planets might spin faster.}
 
 In order to evaluate $\rho _c $ and $r_c$, we need a model of internal structure of gaseous planets. 
 First, we assume that the planetary radius is constant at $R_p = R_{p,J}$, as the numerical calculations show that the radii of gaseous planets over the range of $0.1 R_{p, J} < M_p < 10M_{p, J}$ (with core mass less than 10\%) are converged to $0.8 R_{p, J} < R_p < 1.2R_{p, J}$ in 1 Gyr \citep{fortney2007}. 
