I didn't remember which part I edited but apparently I made some change 10 days ago.

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,21 +2,125 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-04-22 13:16:45 +0900 
+%% Created for Yuka Fujii at 2015-04-30 11:43:44 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{sano1993,
+	Author = {{Sano}, Y.},
+	Date-Added = {2015-04-30 02:37:51 +0000},
+	Date-Modified = {2015-04-30 02:39:10 +0000},
+	Journal = {Journal of geomagnetism and geoelectricity},
+	Number = {1},
+	Pages = {65-77},
+	Title = {The Magnetic Fields of the Planets: A New Scaling Law of the Dipole Moments of the Planetary Magnetism},
+	Volume = {45},
+	Year = {1993}}
+
+@article{christensen2006,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2006GeoJI.166...97C},
+	Author = {{Christensen}, U.~R. and {Aubert}, J.},
+	Date-Added = {2015-04-30 02:35:43 +0000},
+	Date-Modified = {2015-04-30 02:36:11 +0000},
+	Doi = {10.1111/j.1365-246X.2006.03009.x},
+	Journal = {Geophysical Journal International},
+	Keywords = {convection, core flow, dynamo theory, geomagnetic field, inner core, planetology},
+	Month = jul,
+	Pages = {97-114},
+	Title = {{Scaling properties of convection-driven dynamos in rotating spherical shells and application to planetary magnetic fields}},
+	Volume = 166,
+	Year = 2006,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1111/j.1365-246X.2006.03009.x}}
+
+@article{starchenko2002,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2002Icar..157..426S},
+	Author = {{Starchenko}, S.~V. and {Jones}, C.~A.},
+	Date-Added = {2015-04-30 02:34:11 +0000},
+	Date-Modified = {2015-04-30 02:43:27 +0000},
+	Doi = {10.1006/icar.2002.6842},
+	Journal = {\icarus},
+	Month = jun,
+	Pages = {426-435},
+	Title = {{Typical Velocities and Magnetic Field Strengths in Planetary Interiors}},
+	Volume = 157,
+	Year = 2002,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1006/icar.2002.6842}}
+
+@article{mizutani1992,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1992AdSpR..12..265M},
+	Author = {{Mizutani}, H. and {Yamamoto}, T. and {Fujimura}, A.},
+	Date-Added = {2015-04-30 02:32:21 +0000},
+	Date-Modified = {2015-04-30 02:32:35 +0000},
+	Doi = {10.1016/0273-1177(92)90397-G},
+	Journal = {Advances in Space Research},
+	Keywords = {Magnetic Flux, Planetary Magnetic Fields, Scaling Laws, Dipole Moments, Dynamo Theory, Neptune (Planet), Poloidal Flux, Uranus (Planet), Voyager 2 Spacecraft},
+	Month = aug,
+	Pages = {265-279},
+	Title = {{A new scaling law of the planetary magnetic fields}},
+	Volume = 12,
+	Year = 1992,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0273-1177(92)90397-G}}
+
+@article{stevenson1979,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1979GApFD..12..139S},
+	Author = {{Stevenson}, D.~J.},
+	Date-Added = {2015-04-30 02:28:28 +0000},
+	Date-Modified = {2015-04-30 02:28:35 +0000},
+	Doi = {10.1080/03091927908242681},
+	Journal = {Geophysical and Astrophysical Fluid Dynamics},
+	Keywords = {Astrophysics, Convective Heat Transfer, Magnetic Fields, Mixing Length Flow Theory, Planetary Cores, Stellar Structure, Turbulent Heat Transfer, Boussinesq Approximation, Earth Core, Heuristic Methods, Jupiter (Planet), Rotating Environments},
+	Pages = {139-169},
+	Title = {{Turbulent thermal convection in the presence of rotation and a magnetic field - A heuristic theory}},
+	Volume = 12,
+	Year = 1979,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1080/03091927908242681}}
+
+@article{russel1978,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1978Natur.272..147R},
+	Author = {{Russell}, C.~T.},
+	Date-Added = {2015-04-30 02:27:29 +0000},
+	Date-Modified = {2015-04-30 02:27:37 +0000},
+	Doi = {10.1038/272147a0},
+	Journal = {\nat},
+	Keywords = {Magnetic Moments, Planetary Magnetic Fields, Angular Momentum, Dipole Moments, Earth-Moon System, Jupiter (Planet), PLANETS, MAGNETIC MOMENTS, MAGNETIC PROPERTIES, EARTH, JUPITER, MERCURY, VENUS, MARS, EARTH-MOON SYSTEM},
+	Month = mar,
+	Pages = {147},
+	Title = {{Re-evaluating Bode's law of planetary magnetism}},
+	Volume = 272,
+	Year = 1978,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/272147a0}}
+
+@article{busse1976,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1976PEPI...12..350B},
+	Author = {{Busse}, F.~H.},
+	Date-Added = {2015-04-30 02:25:21 +0000},
+	Date-Modified = {2015-04-30 02:25:31 +0000},
+	Doi = {10.1016/0031-9201(76)90030-3},
+	Journal = {Physics of the Earth and Planetary Interiors},
+	Keywords = {Convective Flow, Dynamo Theory, Mathematical Models, Planetary Magnetic Fields, Planetary Structure, Conducting Fluids, Earth (Planet), Electric Conductors, Jupiter (Planet), Mercury (Planet), Planetology},
+	Month = sep,
+	Pages = {350-358},
+	Title = {{Generation planetary magnetism by convection}},
+	Volume = 12,
+	Year = 1976,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1016/0031-9201(76)90030-3}}
+
 @article{fortney2007,
 	Abstract = {To aid in the physical interpretation of planetary radii constrained through observations of transiting planets, or eventually direct detections, we compute model radii of pure hydrogen-helium, water, rock, and iron planets, along with various mixtures. Masses ranging from 0.01 Earth masses to 10 Jupiter masses at orbital distances of 0.02 to 10 AU are considered. For hydrogen-helium rich planets, our models are the first to couple planetary evolution to stellar irradiation over a wide range of orbital separations (0.02 to 10 AU) through a non-gray radiative-convective equilibrium atmosphere model. Stellar irradiation retards the contraction of giant planets, but its effect is not a simple function of the irradiation level: a planet at 1 AU contracts as slowly as a planet at 0.1 AU. For hydrogen-helium planets, we consider cores up to 90\% of the total planet mass, comparable to those of Uranus and Neptune. If "hot Neptunes" have maintained their original masses and are not remnants of more massive planets, radii of 0.30-0.45 times Jupiter's radius are expected. Water planets are ~40-50\% larger than rocky planets, independent of mass. Finally, we provide tables of planetary radii at various ages and compositions, and for ice-rock-iron planets we fit our results to analytic functions, which will allow for quick composition estimates, given masses and radii, or mass estimates, given only planetary radii. These results will assist in the interpretation of observations for both the current transiting planet surveys as well as upcoming space missions, including CoRoT and Kepler.},
 	Adsnote = {Provided by Yuka FUjii},
-	Adsurl = {},
 	Archiveprefix = {arXiv},
 	Author = {{Fortney}, F.~J. and {Marley}, M.~S. and {Barnes}, J.~W.},
 	Eprint = {0612671},
 	Journal = {\apj},
-	Keywords = {},
 	Month = apr,
 	Pages = {1661-1672},
 	Primaryclass = {astro-ph.EP},
@@ -24,9 +128,6 @@
 	Volume = 659,
 	Year = 2007,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/791/1/25}}
-
-
-
 
 @article{noyola2014,
 	Abstract = {In the Jupiter-Io system, the moon's motion produces currents along the field lines that connect it to Jupiter's polar regions. The currents generate and modulate radio emissions along their paths via the electron-cyclotron maser instability. Based on this process, we suggest that such modulation of planetary radio emissions may reveal the presence of exomoons around giant planets in exoplanetary systems. A model explaining the modulation mechanism in the Jupiter-Io system is extrapolated and used to define criteria for exomoon detectability. A cautiously optimistic scenario of the possible detection of such exomoons around Epsilon Eridani b and Gliese 876 b is provided.},
