--- a/ms.tex
+++ b/ms.tex
@@ -478,13 +478,13 @@ Combining equation (\ref{eq:F_nu}) with the scaling relation of magnetic moment 
  %\begin{minipage}{0.5\hsize}
   %\begin{center}
    %\includegraphics[width=\hsize]{radio_emission_Mdot1e-8_constRp.pdf}
-   \plotonesc{radio_emission_Mdot1e-8_constRp.pdf}
+   \plotonesc{radio_emission_Mdot1e-8_constRp.eps}
   %\end{center}
  %\end{minipage}
  %\begin{minipage}{0.5\hsize}
    %\begin{center}
    %\includegraphics[width=\hsize]{radio_emission_Mdot1e-5_constRp.pdf}
-   \plotonesc{radio_emission_Mdot1e-5_constRp.pdf}
+   \plotonesc{radio_emission_Mdot1e-5_constRp.eps}
   %\end{center} 
  %\end{minipage}
    \caption{Top panel: Intensity of radio emission (in the unit of Jy) from a companion to a RG star (left) and an AGB star at 1 pc. The hashed region with vertical lines are not observable because of the plasma frequency cut-off of Earth's ionosphere. The hashed region with horizontal lines are not observable because of the plasma frequency cut-off of the stellar wind plasma in the vicinity of the companion. Bottom panel: cyclotron frequency, i.e., the frequency of radio emission. }
